--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,7 +29,8 @@ jobs:
     continue-on-error: ${{ matrix.zig == 'master' || matrix.toolchain == 'nightly' || matrix.os == 'windows-latest' }}
     strategy:
       # If one platform fails, allow the rest to keep testing if `CI-no-fail-fast` label is present
-      fail-fast: ${{ !contains(github.event.pull_request.labels.*.name, 'CI-no-fail-fast') }}
+      # fail-fast: ${{ !contains(github.event.pull_request.labels.*.name, 'CI-no-fail-fast') }}
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-13, windows-latest]
         toolchain: [1.74.0, stable, nightly]
@@ -118,10 +119,10 @@ jobs:
           fi
       - name: macOS - Test build
         run: |
-          cargo run zigbuild --target aarch64-apple-darwin
-          cargo run zigbuild --target aarch64-apple-darwin --release
+          cargo run zigbuild --target aarch64-apple-darwin -vv
+          cargo run zigbuild --target aarch64-apple-darwin --release -vv
       - name: macOS - Test build universal2
-        run: cargo run zigbuild --target universal2-apple-darwin
+        run: cargo run zigbuild --target universal2-apple-darwin -vv
       - name: macOS - Test build with SDKROOT
         if: matrix.os == 'ubuntu-latest'
         env:
@@ -131,13 +132,13 @@ jobs:
           curl -sqL https://github.com/phracker/MacOSX-SDKs/releases/download/11.3/$SDK.tar.xz | tar -Jx
           export SDKROOT=$PWD/$SDK
 
-          cargo run zigbuild --target aarch64-apple-darwin --manifest-path tests/hello-tls/Cargo.toml
-          cargo run zigbuild --target aarch64-apple-darwin --manifest-path tests/hello-rustls/Cargo.toml
+          cargo run zigbuild --target aarch64-apple-darwin --manifest-path tests/hello-tls/Cargo.toml -vv
+          cargo run zigbuild --target aarch64-apple-darwin --manifest-path tests/hello-rustls/Cargo.toml -vv
       - name: macOS - Test build bindgen with SDKROOT
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.toolchain != '1.74.0' }}
         env:
           SDK: MacOSX11.3.sdk
-        run: cargo run zigbuild --manifest-path tests/zstd-rs/Cargo.toml --features bindgen --target aarch64-apple-darwin
+        run: cargo run zigbuild --manifest-path tests/zstd-rs/Cargo.toml --features bindgen --target aarch64-apple-darwin -vv
       - name: Linux - Test x86_64 build
         if: matrix.os == 'ubuntu-latest'
         run: |
